# mkdocs-po-i18n

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rumdl.toml  LICENSE  README.md  pyproject.toml  tox.ini
docs/: config.yml  mkdocs.en.yml  mkdocs.fr.yml
docs/en/: index.md
docs/locales/fr/LC_MESSAGES/: index.po
src/mkdocs_po_i18n/: build_md_translations.py  build_po_translations.py  build_pot_translations.py  live_serve.py  live_serve_en.py
